--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ pytesseract
 pybind11
 chromadb
 Cython
-"git+https://github.com/philferriere/cocoapi.git#egg=pycocotools&subdirectory=PythonAPI"
+# "git+https://github.com/philferriere/cocoapi.git#egg=pycocotools&subdirectory=PythonAPI"
 unstructured[local-inference]
 CC=clang CXX=clang++ ARCHFLAGS="-arch x86_64" pip install 'git+https://github.com/facebookresearch/detectron2.git'
 layoutparser[layoutmodels,tesseract]
