--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+torch==1.9.0
 git+https://github.com/facebookresearch/detectron2.git
 -f https://dl.fbaipublicfiles.com/detectron2/wheels/cpu/torch1.9/index.htmldetectron2
 streamlit 
