--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-torch==1.9.0
-git+https://github.com/facebookresearch/detectron2.git
--f https://dl.fbaipublicfiles.com/detectron2/wheels/cpu/torch1.9/index.htmldetectron2
+#torch==1.9.0
+pyTorch==2.1.0
+torchvision==0.16.0
+git+https://github.com/facebookresearch/detectron2.git #detectron2
+#-f https://dl.fbaipublicfiles.com/detectron2/wheels/cpu/torch1.9/index.htmldetectron2
 streamlit 
 langchain
 unstructured
