--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 
 pyTorch==2.1.0
 torchvision==0.16.0
-git+https://github.com/facebookresearch/detectron2.git #detectron2
+#git+https://github.com/facebookresearch/detectron2.git #detectron2
 #-f https://dl.fbaipublicfiles.com/detectron2/wheels/cpu/torch2.1/index.html
 streamlit 
 langchain
